--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "hls.js": "^1.1.5",
+    "plyr-react": "^5.3.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
     "video.js": "^7.21.3",
     "videojs-contrib-hls": "^5.15.0",
     "videojs-contrib-quality-levels": "^3.0.0",
