--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "videojs-seek-buttons": "^3.0.1"
   },
   "devDependencies": {
+    "@types/hls.js": "^1.0.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/video.js": "^7.3.58",
